[package]
name = "paging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.65"
nix = { version = "0.27", features = [
    "feature",
    "ioctl",
    "mman",
    "poll",
    "process",
    "signal",
] }
sendfd = "0.4.3"
userfaultfd = "^0.7"
